[package]
name = "bilibili"
version = "0.2.0"
edition = "2021"
description = "A bilibili video converter"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.214" , features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.68"
